--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "jsx": "react",
     "esModuleInterop": true,
     "sourceMap": true,
+    "allowJs": true,
     "baseUrl": "./",
     "strict": true,
     "paths": {
