--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "start-server": "node node-generate/index.ts"
+    "start-server": "node node-generate/index.js"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@ant-design/mobile": "^3.0.0-alpha.5",
     "@ant-design/pro-layout": "^5.0.12",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.20",
@@ -28,9 +29,11 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lint-staged": "^10.0.7",
+    "mockjs": "^1.1.0",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dragula": "^1.1.17",
     "umi": "^3.2.20",
     "yorkie": "^2.0.0"
   }
